Update dependencies, add explicit surefire and failsafe dependencies